--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/banhang
 spring.datasource.username=root
 
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
